// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Public story controller GET /stories Возвращает опубликованные сторис, отсортированные по убыванию даты публикации 1`] = `
Object {
  "items": Array [
    Object {
      "image": Object {
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-format": "JPEG",
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320х320": Object {
            "height": 320,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/320х320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460х460": Object {
            "height": 460,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/460х460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "publishAt": "2022-04-09T10:23:30.000Z",
      "title": "Заголовок истории",
      "urlPart": "story-url-part2",
    },
    Object {
      "image": Object {
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-format": "JPEG",
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320х320": Object {
            "height": 320,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/320х320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460х460": Object {
            "height": 460,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/460х460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "publishAt": "2022-04-08T10:25:30.000Z",
      "title": "Заголовок истории",
      "urlPart": "story-url-part3",
    },
    Object {
      "image": Object {
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-format": "JPEG",
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320х320": Object {
            "height": 320,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/320х320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460х460": Object {
            "height": 460,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/460х460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "publishAt": "2022-04-07T10:21:30.000Z",
      "title": "Заголовок истории",
      "urlPart": "story-url-part1",
    },
  ],
  "total": 3,
}
`;

exports[`Public story controller GET /stories Возвращает опубликованные трансформированные сторис 1`] = `
Object {
  "items": Array [
    Object {
      "image": Object {
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-format": "JPEG",
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320х320": Object {
            "height": 320,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/320х320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460х460": Object {
            "height": 460,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/460х460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "publishAt": "2022-04-07T10:21:30.000Z",
      "title": "Заголовок истории",
      "urlPart": "story-url-part1",
    },
    Object {
      "image": Object {
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-format": "JPEG",
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320х320": Object {
            "height": 320,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/320х320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460х460": Object {
            "height": 460,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/460х460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "publishAt": "2022-04-07T10:23:30.000Z",
      "title": "Заголовок истории",
      "urlPart": "story-url-part2",
    },
    Object {
      "image": Object {
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-format": "JPEG",
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320х320": Object {
            "height": 320,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/320х320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460х460": Object {
            "height": 460,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/460х460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "publishAt": "2022-04-07T10:25:30.000Z",
      "title": "Заголовок истории",
      "urlPart": "story-url-part3",
    },
  ],
  "total": 3,
}
`;

exports[`Public story controller GET /stories Возвращает ошибку и статус 400, если порядок сортировки некорректен 1`] = `
Object {
  "error": "Некорректный параметр сортировки: \\"unknown\\"",
  "status": 400,
}
`;

exports[`Public story controller GET /stories Может отдавать сторис с указанным лимитом и страницей 1`] = `
Object {
  "items": Array [
    Object {
      "image": Object {
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-format": "JPEG",
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320х320": Object {
            "height": 320,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/320х320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460х460": Object {
            "height": 460,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/460х460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "publishAt": "2022-04-08T10:25:30.000Z",
      "title": "Заголовок истории",
      "urlPart": "story-url-part3",
    },
  ],
  "total": 3,
}
`;

exports[`Public story controller GET /stories/:urlPart Возвращает опубликованный трансформированный сторис и его страницы по urlPart 1`] = `
Object {
  "cover": Object {
    "image": Object {
      "imagename": "4747.jpg_1654518939714",
      "meta": Object {
        "orig-format": "JPEG",
        "orig-size-bytes": 168385,
      },
      "sizes": Object {
        "1098x1098": Object {
          "height": 1098,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
          "width": 824,
        },
        "1200х1200": Object {
          "height": 1200,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
          "width": 900,
        },
        "1252x1252": Object {
          "height": 1252,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
          "width": 939,
        },
        "1428x1428": Object {
          "height": 1280,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
          "width": 960,
        },
        "1600x1600": Object {
          "height": 1280,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
          "width": 960,
        },
        "1920x1920": Object {
          "height": 1280,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
          "width": 960,
        },
        "320х320": Object {
          "height": 320,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/320х320",
          "width": 240,
        },
        "338x338": Object {
          "height": 338,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
          "width": 253,
        },
        "439x439": Object {
          "height": 439,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
          "width": 329,
        },
        "460х460": Object {
          "height": 460,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/460х460",
          "width": 345,
        },
        "571x571": Object {
          "height": 571,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
          "width": 428,
        },
        "650x650": Object {
          "height": 650,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
          "width": 488,
        },
        "845x845": Object {
          "height": 845,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
          "width": 634,
        },
        "optimize": Object {
          "height": 1280,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
          "width": 960,
        },
        "orig": Object {
          "height": 1280,
          "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
          "width": 960,
        },
      },
    },
    "title": "Заголовок истории",
  },
  "id": 1,
  "pages": Array [
    Object {
      "button": Object {
        "color": "#fffaaa",
        "link": "https://example.com/",
        "text": "Заголовок слайда",
        "textColor": "#fffbbb",
      },
      "image": Object {
        "imagename": "4747.jpg_1654518939714",
        "meta": Object {
          "orig-format": "JPEG",
          "orig-size-bytes": 168385,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 1098,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1098x1098",
            "width": 824,
          },
          "1200х1200": Object {
            "height": 1200,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1200х1200",
            "width": 900,
          },
          "1252x1252": Object {
            "height": 1252,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1252x1252",
            "width": 939,
          },
          "1428x1428": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1428x1428",
            "width": 960,
          },
          "1600x1600": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1600x1600",
            "width": 960,
          },
          "1920x1920": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/1920x1920",
            "width": 960,
          },
          "320х320": Object {
            "height": 320,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/320х320",
            "width": 240,
          },
          "338x338": Object {
            "height": 338,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/338x338",
            "width": 253,
          },
          "439x439": Object {
            "height": 439,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/439x439",
            "width": 329,
          },
          "460х460": Object {
            "height": 460,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/460х460",
            "width": 345,
          },
          "571x571": Object {
            "height": 571,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/571x571",
            "width": 428,
          },
          "650x650": Object {
            "height": 650,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/650x650",
            "width": 488,
          },
          "845x845": Object {
            "height": 845,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/845x845",
            "width": 634,
          },
          "optimize": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/optimize",
            "width": 960,
          },
          "orig": Object {
            "height": 1280,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/4747.jpg_1654518939714/orig",
            "width": 960,
          },
        },
      },
      "title": "Заголовок слайда",
    },
  ],
}
`;
